@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-24T08:18:32Z",
-  "count_outdated" : 949,
-  "uniques_outdated" : 596,
+  "timestamp" : "2023-08-25T01:05:18Z",
+  "count_outdated" : 951,
+  "uniques_outdated" : 597,
   "count" : 972,
   "uniques" : 613,
   "clones" : [
-    {
-      "timestamp": "2023-08-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-11T00:00:00Z",
       "count": 2,
